<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--  Header  -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/header"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/hualien_giants_no_background"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--  Body  -->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <!--  Base Amount  -->
        <LinearLayout
            android:id="@+id/base_amount_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/body">

            <TextView
                android:id="@+id/base_amount_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/base_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <EditText
                android:id="@+id/base_amount_input"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginStart="25dp"
                android:hint="@string/bill_amount_hint"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@id/base_amount_title"
                app:layout_constraintTop_toTopOf="@id/base_amount_title"
                />
        </LinearLayout>

        <!--  Tip Selection Seekbar  -->
        <LinearLayout
            android:id="@+id/tip_selection_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/base_amount_container">

            <TextView
                android:id="@+id/tip_amount_value"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_value"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/seek_bar_container"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/tip_amount_value"
                app:layout_constraintTop_toTopOf="@id/tip_amount_value">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tip_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_comment"
                    android:textColor="@color/comment_color_good"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </LinearLayout>

        <!--  Tip Amount  -->
        <LinearLayout
            android:id="@+id/tip_amount_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_selection_container">

            <TextView
                android:id="@+id/tip_amount_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tip_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/tip_amount_result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/tip_amount_result"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tip_amount_title"
                app:layout_constraintTop_toTopOf="@id/tip_amount_title"
                />
        </LinearLayout>

        <!--  Tax Amount  -->
        <LinearLayout
            android:id="@+id/tax_amount_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_amount_container">

            <TextView
                android:id="@+id/tax_amount_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tax_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/tax_amount_result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/tax_amount_result"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tax_amount_title"
                app:layout_constraintTop_toTopOf="@id/tax_amount_title"
                />
        </LinearLayout>

        <!--  Total Amount  -->
        <LinearLayout
            android:id="@+id/total_amount_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tax_amount_container">

            <TextView
                android:id="@+id/total_amount_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/total_amount_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/total_amount_result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/total_amount_result"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/total_amount_title"
                app:layout_constraintTop_toTopOf="@id/total_amount_title"
                />
        </LinearLayout>

        <!--  Number of People  -->
        <LinearLayout
            android:id="@+id/num_people_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_amount_container">

            <TextView
                android:id="@+id/num_people_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/num_people_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <Spinner
                android:id="@+id/people_dropdown"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:hint="@string/number_of_people"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <!--  Per Person Amount  -->
        <LinearLayout
            android:id="@+id/per_person_amount_container"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/num_people_container">

            <TextView
                android:id="@+id/per_person_amount_title"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/per_person_amount_title"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/per_person_amount_result"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/total_amount_result"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/per_person_amount_title"
                app:layout_constraintTop_toTopOf="@id/per_person_amount_title"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>